--- a/html/index.html
+++ b/html/index.html
@@ -76,5 +76,5 @@
     </section>
 
 </body>
-    <script src="../js/action.js" ></script>
+    <script type="module" src="../js/action.js" ></script>
 </html>
