--- a/html/album.html
+++ b/html/album.html
@@ -21,11 +21,12 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Album</title>
 </head>
 
-<body>
+<body class="background-main">
     <!-- Popup -->
     <div class="popup" id="logoutPopup">
         <div class="popup-content">
@@ -39,18 +40,33 @@
     </div>
     <!-- nav -->
     <section class="row ">
-        <nav class=" container-fluid w-100 d-flex justify-content-center align-items-center"
+        <nav class=" container-fluid d-flex justify-content-center align-items-center"
             style="height: 106px; position: fixed; top: 0; right: 0; background-color: #2B2828; justify-content: space-between!important; z-index: 99;">
-            <img src="../images/logo_nav.png" alt="logo" class=" img-logo">
+            <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"
+                    id="logo-img-remove"></a>
+            <!-- <img src="../images/icon-menu-mobie.png" alt="" class="menu-icon-md">
+            <a href="./home.html"><img src="../images/JHOOM.png" alt="" class="menu-logo-md"></a> -->
+            <div class="info-name text-light fs-5">
+                <label>Hello, </label><label>Long</label>
+            </div>
+        </nav>
+    </section>
+    <section class="row nav-moblie">
+        <nav class=" container-fluid d-flex justify-content-center align-items-center"
+            style="height: 106px; position: fixed; top: 0; right: 0; background-color: #2B2828; justify-content: space-between!important; z-index: 99;">
+            <!-- <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"
+                    id="logo-img-remove"></a> -->
+            <img src="../images/icon-menu-mobie.png" alt="" class="menu-icon-md">
+            <a href="./home.html"><img src="../images/JHOOM.png" alt="" class="menu-logo-md"></a>
             <div class="info-name text-light fs-5">
                 <label>Hello, </label><label>Long</label>
             </div>
         </nav>
     </section>
     <!-- silde bar -->
-    <div class="container-fluid">
-        <section class="row">
-            <div class="col-lg-2 text-light"
+    <div class="container-fluid  ">
+        <section class="row ">
+            <div class="col-lg-2 col-md-0 silde-bar text-light"
                 style="background-color: #2B2828; position: fixed; top:106px; left: 0; bottom: 0;">
                 <ul class="menu-nav mt-5">
                     <li>
@@ -135,7 +151,99 @@
                     </li>
                 </ul>
             </div>
-            <script src="../js/action.js"></script>
+        </section>
+        <!-- Container-main -->
+        <section class="container-fluid">
+            <div class="row">
+                <!-- Carousel -->
+                <div class="col-lg-2 col-md-0 col-sm-0 col-0 remove-element"></div>
+                <div class="col-lg-10 col-md-12 col-sm-12 col-12 width-carousel-md" style="margin-top: 106px;">
+                    <img src="../images/banner5.jpg" alt="" class="w-100" style="height: 400px; object-fit: cover;">
+                    <nav class="navbar  col-12 col-lg-4 col-md-6 col-sm-6 ">
+                        <form class="container-fluid">
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon1"
+                                    style="background-color: rgba(255, 255, 255, 0) ; border: none;"><i
+                                        class="fa fa-search text-light"></i></span>
+                                <input type="text" class="form-control form-search " placeholder="Search">
+                            </div>
+                        </form>
+                    </nav>
+                    <div class="row">
+                        <div class=" col-12  row g-4">
+                            <h2 style="color: #3EDC24; font-family:Sansation">TOP ALBUM</h2>
+                            <div class="row album">
+                            </div>
+
+                            <h2 style="color: #3EDC24; font-family:Sansation">TOP KPOP ALBUMS</h2>
+                            <div class="row artirst">
+                            </div>
+                        </div>
+                       
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="play-music  d-none row p-0 m-0">
+        <div class="col-3 author-infor d-flex justify-content-around align-items-center">
+            <div class="me-2">
+
+                <img class="image-song  " src="../images/lockaway.png" alt="">
+            </div>
+            <div class="text-white">
+                <div class="fs-2  name-song">Vision</div>
+                <div class="fs-5  author-song">Bella</div>
+
+            </div>
+        </div>
+        <div class="col-xl-6 col-sm-9   text-white d-flex   align-items-center">
+            <div style="width: 100%;">
+                <div class="col-12  d-flex justify-content-center align-items-center ">
+
+                    <div class="current-time">00:00</div>
+                    <input type="range" min="1" max="100" value="0" class="pointer seek_slider ms-5 me-5">
+                    <div class="total-duration">00:00</div>
+                </div>
+                <div class="col-12 d-flex justify-content-center align-items-center">
+
+                    <div class="random-track me-3  pointer ms-3 fs-4">
+                        <i class="fa fa-heart"></i>
+                    </div>
+                    <div class="prev-track me-3  pointer ms-3 fs-4">
+                        <i class="fa fa-step-backward fa-xl" title="back"></i>
+                    </div>
+                    <div class="playpause-track me-3  pointer ms-3 fs-4">
+                        <i class="fa fa-play-circle fa-2x play-song"></i>
+                        <i class="fa fa-pause-circle fa-2x d-none pause-song"></i>
+                    </div>
+                    <div class="next-track me-3  pointer ms-3 fs-4">
+                        <i class="fa fa-step-forward fa-xl"></i>
+                    </div>
+                    <div class="repeat-track me-3  pointer ms-3 fs-4">
+                        <i class="fa fa-repeat fa-xl" title="repeat"></i>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+        </div>
+        <div class="volume col-3 d-flex justify-content-center align-items-center">
+
+            <i class="fa fa-volume-down text-white fs-3 "></i>
+            <input type="range" min="1" max="100" value="99" class="pointer volume_slider me-2 ms-2"
+                onchange="setVolume()">
+            <i class="fa fa-volume-up text-white fs-3"></i>
+        </div>
+    </section>
+
+
 </body>
+<script type="module" src="../js/action.js"></script>
+<script>
+
+</script>
 
 </html>
