--- a/html/home.html
+++ b/html/home.html
@@ -42,10 +42,7 @@
     <section class="row ">
         <nav class=" container-fluid d-flex justify-content-center align-items-center"
             style="height: 106px; position: fixed; top: 0; right: 0; background-color: #2B2828; justify-content: space-between!important; z-index: 99;">
-            <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"
-                    id="logo-img-remove"></a>
-            <!-- <img src="../images/icon-menu-mobie.png" alt="" class="menu-icon-md">
-            <a href="./home.html"><img src="../images/JHOOM.png" alt="" class="menu-logo-md"></a> -->
+            <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"></a>
             <div class="info-name text-light fs-5">
                 <label>Hello, </label><label>Long</label>
             </div>
@@ -54,9 +51,97 @@
     <section class="row nav-moblie">
         <nav class=" container-fluid d-flex justify-content-center align-items-center"
             style="height: 106px; position: fixed; top: 0; right: 0; background-color: #2B2828; justify-content: space-between!important; z-index: 99;">
-            <!-- <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"
-                    id="logo-img-remove"></a> -->
-            <img src="../images/icon-menu-mobie.png" alt="" class="menu-icon-md">
+
+            <label for="nav__check" class="nav__bar-btn">
+                <img src="../images/icon-menu-mobie.png" alt="" class="menu-icon-md">
+            </label>
+            <input type="checkbox" id="nav__check">
+            <label for="nav__check" class="overlay-display"></label>
+            <!-- Nav Mobile -->
+            <nav class="nav__mobile">
+                <div for="nav__check" class="nav__mobile-close">
+                    <label for="nav__check">X</label>
+                </div>
+                <ul class="nav__mobile-list menu-nav ">
+                    <li>
+
+                        <a href="./home.html" class="nav__mobile-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                fill="none">
+                                <path d="M2.5 27.5H27.5" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M3.68652 27.5003L3.74903 12.4627C3.74903 11.7002 4.11152 10.9753 4.71152 10.5003L13.4615 3.68778C14.3615 2.98778 15.624 2.98778 16.5365 3.68778L25.2865 10.4878C25.899 10.9628 26.249 11.6877 26.249 12.4627V27.5003"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
+                                <path
+                                    d="M19.375 13.75H10.625C9.5875 13.75 8.75 14.5875 8.75 15.625V27.5H21.25V15.625C21.25 14.5875 20.4125 13.75 19.375 13.75Z"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M12.5 20.3125V22.1875" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M13.125 9.375H16.875" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./playlist.html" class="nav__mobile-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                fill="none">
+                                <path
+                                    d="M11.25 27.5H18.75C25 27.5 27.5 25 27.5 18.75V11.25C27.5 5 25 2.5 18.75 2.5H11.25C5 2.5 2.5 5 2.5 11.25V18.75C2.5 25 5 27.5 11.25 27.5Z"
+                                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M19.375 12.1875C20.4105 12.1875 21.25 11.348 21.25 10.3125C21.25 9.27697 20.4105 8.4375 19.375 8.4375C18.3395 8.4375 17.5 9.27697 17.5 10.3125C17.5 11.348 18.3395 12.1875 19.375 12.1875Z"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M10.625 12.1875C11.6605 12.1875 12.5 11.348 12.5 10.3125C12.5 9.27697 11.6605 8.4375 10.625 8.4375C9.58947 8.4375 8.75 9.27697 8.75 10.3125C8.75 11.348 9.58947 12.1875 10.625 12.1875Z"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M10.5 16.625H19.5C20.125 16.625 20.625 17.125 20.625 17.75C20.625 20.8625 18.1125 23.375 15 23.375C11.8875 23.375 9.375 20.8625 9.375 17.75C9.375 17.125 9.875 16.625 10.5 16.625Z"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                            <span>Playlist</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./album.html" class="nav__mobile-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                fill="none">
+                                <path d="M2.5 27.5H27.5" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M3.68652 27.5003L3.74903 12.4627C3.74903 11.7002 4.11152 10.9753 4.71152 10.5003L13.4615 3.68778C14.3615 2.98778 15.624 2.98778 16.5365 3.68778L25.2865 10.4878C25.899 10.9628 26.249 11.6877 26.249 12.4627V27.5003"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
+                                <path
+                                    d="M19.375 13.75H10.625C9.5875 13.75 8.75 14.5875 8.75 15.625V27.5H21.25V15.625C21.25 14.5875 20.4125 13.75 19.375 13.75Z"
+                                    stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M12.5 20.3125V22.1875" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M13.125 9.375H16.875" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <span>Album</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./index.html" class="nav__mobile-link" id="isLogout">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                fill="none">
+                                <path
+                                    d="M17.0454 20.4825C17.5535 20.1901 17.8602 19.6267 17.8871 19.0711L18.2735 11.1024C18.3147 10.2512 17.6958 9.3125 16.6506 9.3125H13.3494C12.3041 9.3125 11.6853 10.2513 11.7265 11.1024C11.7265 11.1024 11.7265 11.1024 11.7265 11.1024L12.1129 19.0711C12.1129 19.0711 12.1129 19.0711 12.1129 19.0711L17.0454 20.4825ZM17.0454 20.4825C17.8845 21.1765 18.3958 22.2783 18.3958 23.4375C18.3958 25.3644 16.9829 27.1328 15 27.1328C13.0171 27.1328 11.6042 25.3644 11.6042 23.4375C11.6042 22.2783 12.1155 21.1765 12.9546 20.4825H17.0454ZM28.7725 26.2382L28.7725 26.2383C29.0954 26.8679 29.0561 27.5817 28.7708 28.1369C28.486 28.691 28.0121 29 27.4969 29H2.50283C1.98618 29 1.5129 28.6906 1.22868 28.1363C0.94364 27.5805 0.905127 26.8663 1.22718 26.2383L1.22723 26.2382L13.7244 1.86169C13.7244 1.86166 13.7244 1.86162 13.7244 1.86158C14.0403 1.24567 14.5464 0.999771 15.0002 1C15.4543 1.00023 15.9605 1.24714 16.2757 1.8617L28.7725 26.2382Z"
+                                    stroke="white" stroke-width="2" />
+                            </svg>
+                            <span>Logout</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
             <a href="./home.html"><img src="../images/JHOOM.png" alt="" class="menu-logo-md"></a>
             <div class="info-name text-light fs-5">
                 <label>Hello, </label><label>Long</label>
@@ -189,7 +274,7 @@
                         </form>
                     </nav>
                     <div class="row">
-                        <div class=" col-8  row g-4">
+                        <div class=" col-lg-8 col-md-12 col-sm-0 col-0 row g-4">
                             <h2 style="color: #3EDC24;">TOP ALBUM</h2>
                             <div class="row album">
                             </div>
