--- a/html/album.html
+++ b/html/album.html
@@ -44,7 +44,7 @@
             style="height: 106px; position: fixed; top: 0; right: 0; background-color: #2B2828; justify-content: space-between!important; z-index: 99;">
             <a href="./home.html"><img src="../images/logo_nav.png" alt="logo" class=" img-logo"></a>
             <div class="info-name text-light fs-5">
-                <label>Hello, </label><label>Long</label>
+                <label> Hello,  nice to see you</label>
             </div>
         </nav>
     </section>
@@ -129,7 +129,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./index.html" class="nav__mobile-link" id="isLogout">
+                        <a href="./index.html" class="nav__mobile-link isLogout" id="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                 fill="none">
                                 <path
@@ -143,7 +143,7 @@
             </nav>
             <a href="./home.html"><img src="../images/JHOOM.png" alt="" class="menu-logo-md"></a>
             <div class="info-name text-light fs-5">
-                <label>Hello, </label><label>Long</label>
+                <label> Hello,  nice to see you</label>
             </div>
         </nav>
     </section>
@@ -222,7 +222,7 @@
 
                     </li>
                     <li>
-                        <a href="./index.html" id="isLogout">
+                        <a href="./index.html" class="isLogout">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                 fill="none">
                                 <path
@@ -245,14 +245,14 @@
                     <img src="../images/banner5.jpg" alt="" class="w-100 banner__mobile" style=" height: 400px;
                         object-fit: cover;">
                     <nav class="navbar  col-12 col-lg-4 col-md-6 col-sm-6 ">
-                        <form class="container-fluid">
+                        <div class="container-fluid">
                             <div class="input-group col-12 col-lg-4 col-md-6 col-sm-6">
                                 <span class="input-group-text" id="basic-addon1"
                                     style="background-color: rgba(255, 255, 255, 0) ; border: none;"><i
                                         class="fa fa-search text-light"></i></span>
                                 <input type="text" class="form-control form-search " placeholder="Search">
                             </div>
-                        </form>
+                        </div>
                     </nav>
                     <div class="row">
                         <div class=" col-12">
@@ -261,7 +261,7 @@
                             </div>
 
                             <h2 style="color: #3EDC24; font-family:Sansation">TOP KPOP ALBUMS</h2>
-                            <div class="row artirst">
+                            <div class="row top-ablum">
                             </div>
                         </div>
 
