--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <section class="bg-secondary d-flex justify-content-center align-items-center" style="width: 100wh; height: 100vh;">
+  <section class=" d-flex justify-content-center align-items-center" style="width: 100wh; height: 100vh; background-color: #2d2d2d;">
     <div class="row login-body" style="">
 
       <div class="col-xl-5 card-infor d-flex justify-content-center align-items-center"
@@ -54,7 +54,7 @@
               <button class="btn fw-bold" style="background-color: #3ace22; color: #000000;"
                 id="button-confirm-username" type="submit">Confirm</button>
             </div>
-            </form>
+          </div>
           </div>
 
           <div style="color: #3ace22;" class=" text-center d-none" id="form-password">
@@ -77,7 +77,7 @@
               <a href="home.html" class="btn fw-bold" style="background-color: #3ace22; color: #000000;"
                 id="button-confirm-password">Confirm</a>
             </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
@@ -87,10 +87,5 @@
   </section>
 
 </body>
-<<<<<<< HEAD
     <script type="module" src="../js/action.js" ></script>
-=======
-<script src="../js/action.js"></script>
-
->>>>>>> 12cf07ff6cca7199ebf1048c26550352e7d404e8
 </html>
